--- a/public_html/addEmployee.html
+++ b/public_html/addEmployee.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <title>Boostrap Validator</title>
+        <title>I&G</title>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.js"></script>  
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>  
@@ -45,27 +45,26 @@
                             </div>
                          </div>
 
-                         <div class="form-group">
-                             <label class="col-md-3 control-label">Contact Number</label>
-                             <div class="col-md-6">
-                                 <input type="number" class="form-control" name="contactNumber" />
-                             </div>
-                         </div>
-
-                         <div class="form-group">
-                             <label class="col-md-3 control-label">Address</label>
-                             <div class="col-md-6">
-                                 <input type="text" class="form-control" name="address" />
-                             </div>
-                         </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Address</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" name="address" />
+                            </div>
+                        </div>
 
                          <div class="form-group">
                              <label class="col-md-3 control-label">Date of Birth</label>
                              <div class="col-md-6">
-                                 <input class="form-control" type="date" name="dateOfBirth"></input>
+                                 <input class="form-control" type="date" name="dateOfBirth"/>
                              </div>
                          </div>
 
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Contact Number</label>
+                            <div class="col-md-6">
+                                <input type="number" class="form-control" name="contactNumber" />
+                            </div>
+                        </div>
                          <!-- #messages is where the messages are placed inside -->
                          <div class="form-group">
                              <div class="col-md-9 col-md-offset-3">
@@ -75,7 +74,7 @@
 
                          <div class="form-group">
                              <div class="col-md-9 col-md-offset-3">
-                                 <button type="submit" class="btn btn-default">Validate</button>
+                                 <button type="submit" class="btn btn-default">Add Employee</button>
                              </div>
                          </div>
 
